Added presentation heroku link to the README again

--- a/README.textile
+++ b/README.textile
@@ -2,4 +2,4 @@ h2. Innku Testing Presentation
 
  This is a small spanish presentation written with showoff. The presentation was about ways to improve testing in the company. We talked about tests in models, controllers, mailers, and so on.
 
-You can find the live presentation in [http://innku-testing.heroku.com/]:http://innku-testing.heroku.com/
+You can find the live presentation in "http://innku-testing.heroku.com/":http://innku-testing.heroku.com/
